# inquisitio

./: Cargo.toml
docs/: doc1  doc10  doc2  doc3  doc4  doc5  doc6  doc7  doc8  doc9
src/: main.rs
src/model/: document.rs  index.rs  mod.rs  tokenizer.rs
